database desin started

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 JWT_SECRET=secretkey
 FRONTEND_URL=http://localhost:8080
+MONGO_URI=mongodb+srv://shahvraj140:j1Md8HLZ36qvIJ4r@cluster0.2bkfdko.mongodb.net/rapidmail?retryWrites=true&w=majority&appName=Cluster0
+
